<resources>
    <string name="app_name">Spectra</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="string_enter_your_email" translatable="false">email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="image">image</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="name_xyz_com">name@xyz.com</string>
    <string name="enter_a_message">Enter a message!!</string>
    <string name="john_doe">John Doe</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="r_time">11:40</string>
    <string name="hello_hello">hello, hello!</string>
    <string name="s_time">11:40</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
</resources>
