<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:contentDescription="@string/image"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />
</LinearLayout>
